fix danger colors for dark mode

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -11,4 +11,9 @@ html.dark {
     // brand colors
     --c-brand: #9CA3AF;
     --c-brand-light: #E5E7EB;
+    
+    --c-danger: #DC2626;
+    --c-danger-bg: #FEF2F2;
+    --c-danger-title: #991B1B;
+    --c-danger-text: #B91C1C;
 }
